final/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-service
  labels:
    app: ml-service
spec:
  selector:
    app: ml-service
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
